<resources>
    <string name="app_name">Capstone_Forum</string>
    <string name="action_settings">Settings</string>

    <!-- Login page -->
    <string name="peazy">Peazy</string>
    <string name="login">Login</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="registerNow">Don\'t have an account yet?</string>
    <string name="singUp">Sign up</string>
    <string name="register">Register</string>
    <string name="firstName">First name</string>
    <string name="lastName">Last name</string>

    <!-- Home page -->
    <string name="pickDate">Pick a date</string>

    <!-- Bottom Nav Menu -->
    <string name="menu_home">Home</string>
    <string name="menu_categories">Categories</string>
    <string name="menu_notifications">Notifications</string>
    <string name="menu_settings">Settings</string>

    <!-- Placeholders -->
    <string name="placeholderCategory">MovieFans</string>
    <string name="placeholderTime">5 hours ago</string>
    <string name="placeholderPostedBy">Posted by Egba559</string>
    <string name="placeholderTitle">What is the best horror movie that came out in 2020?</string>
    <string name="placeholderNumber">51</string>
    <string name="placeholderNumber2">12</string>
    <string name="upvote">Upvote</string>
    <string name="downvote">downvote</string>
    <string name="numbercomments">numberComments</string>
    <string name="add_a_comment">Add a comment</string>
    <string name="enter">Enter</string>
    <string name="already_have_an_account_log_in_now">Already have an account? Login instead</string>
    <string name="button_info">About this app</string>
    <string name="logged_in_as">Logged in as:</string>
    <string name="fullNameString">%s %s</string>
    <string name="logout_btn">Log out</string>
    <string name="placeholderComment"><![CDATA[Taken 3 & Red 2]]></string>
    <string name="addpost">addPost</string>
    <string name="tiTitle">Title</string>
    <string name="Soccer">Soccer</string>
    <string name="fabSend" />
    <string name="tiDescription">Description (optional)</string>
    <string name="current_available_categories">Current available categories</string>
    <string name="deleteBtn">deletebtn</string>
    <string name="new_post_in_s">New post in: %s</string>
    <string name="if_there_was_a_movie_you_could_delete_forever_which_one_would_it_be">If there was a movie you could delete forever, which one would it be?</string>
    <string name="posted_by_s">posted by: %s</string>
    <string name="addphotobtn">addPhotoBtn</string>
    <string name="imagephoto">imagePhoto</string>
    <string name="placeholderDescription">Some description</string>
    <string name="optionalimage">optionalImage</string>
    <string name="aboutapp">This app is made specifically for the AAD Capstone project. This is suppose to be a platform to communicate via posts. A bit like reddit. App made by: Mike Brasser 500780967</string>
    <string name="delete_post">delete post</string>

</resources>