<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="2dp"
        app:cardCornerRadius="8dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:hint="@string/tiTitle" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:lines="3"
                android:inputType="textMultiLine"
                android:gravity="top"
                android:hint="@string/tiDescription"
                android:textSize="15sp"/>

            <ImageButton
                android:id="@+id/addPhotoBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_add_a_photo"
                android:backgroundTint="@color/ghostWhite"
                android:contentDescription="@string/addphotobtn" />

            <ImageView
                android:id="@+id/imagePhoto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/imagephoto" />

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/srCategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Soccer" />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabMakePost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_send"
        android:contentDescription="@string/fabSend"
        android:backgroundTint="@color/colorSecondaryTheme"
        android:tintMode="@color/white" />


</androidx.constraintlayout.widget.ConstraintLayout>