<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/settingsContent"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="6dp">

    <RelativeLayout
        android:id="@+id/loggedInAs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorMainTheme"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="5dp">

            <TextView
                android:id="@+id/LoggedInAsText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/logged_in_as"
                android:textSize="22sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/fullName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fullNameString"
                android:textSize="22sp"
                android:textColor="@color/white"
                android:paddingTop="10dp"
                android:visibility="invisible"
                />

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/loggedInAs">

        <Button
            android:id="@+id/infoBtn"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorMainTheme"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/button_info"
            android:textAlignment="textStart"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/white"
            android:textSize="22sp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLogOut"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp">

        <Button
            android:id="@+id/logOutBtn"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/logout_btn"
            android:textColor="@color/white"
            android:textSize="22sp" />
    </RelativeLayout>

</RelativeLayout>