<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardElevation="2dp"
    app:cardCornerRadius="8dp"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="true"
    android:id="@+id/cardComment"
    android:minHeight="80dp">

    <RelativeLayout
        android:id="@+id/wholeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/okey">

            <TextView
                android:id="@+id/tvUserComment"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:text="@string/firstName"
                android:layout_weight="0.9"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/tvPostedAtComment"
                android:textSize="15sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/placeholderTime" />

        </LinearLayout>

        <TextView
            android:id="@+id/tvComment"
            android:textSize="19sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/placeholderComment"
            android:layout_below="@id/okey"
            android:layout_marginTop="1dp"
            android:textColor="@color/black"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/tvComment"
            android:layout_marginTop="2dp"
            android:gravity="end"/>





    </RelativeLayout>

</com.google.android.material.card.MaterialCardView>